cmake_minimum_required(VERSION 3.31)
project(think-cell VERSION 0.0.1 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/main.cpp)
file(COPY ${CMAKE_SOURCE_DIR}/sources/think-cell DESTINATION ${CMAKE_BINARY_DIR})
